@@ -347,6 +347,17 @@ public class LogWrapper implements Logger {
 	}
 	
 	/**
+	 * Warn等级日志<br>
+	 * @param e 需在日志中堆栈打印的异常
+	 * @param format 格式文本，{} 代表变量
+	 * @param arguments 变量对应的参数
+	 */
+	public void warn(Throwable e) {
+		warn(e.getMessage(), e);
+	}
+	
+	
+	/**
 	 * Error等级日志<br>
 	 * @param e 需在日志中堆栈打印的异常
 	 * @param format 格式文本，{} 代表变量
@@ -354,6 +365,14 @@ public class LogWrapper implements Logger {
 	 */
 	public void error(Throwable e, String format, Object... arguments) {
 		error(StrUtil.format(format, arguments), e);
+	}
+	
+	/**
+	 * Error等级日志<br>
+	 * @param e 需在日志中堆栈打印的异常
+	 */
+	public void error(Throwable e) {
+		error(e.getMessage(), e);
 	}
 	//------------------------ Added method end
 }
