@@ -155,3 +155,4 @@ Entity中toVo区别是否忽略大小写
 
 2.12.4
 1、db增加分页，会根据总结果数计算分页的各种参数
+2、LogWrapper增加只有一个Throwable参数的日志方法
